updated countdown function and added js script for ending animation

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     </header>
     <main>
         <form>
-            <input type="number" name="years" id="years">
+            <input type="number" max="99999999" name="years" id="years">
             <label for="years">years</label>
 
-            <input type="number" name="days" id="days">
+            <input type="number" max="99999999" name="days" id="days">
             <label for="days">days</label>
 
-            <input type="number" name="hours" id="hours">
+            <input type="number" max="99999999" name="hours" id="hours">
             <label for="hours">hours</label>
 
-            <input type="number" name="minutes" id="minutes">
+            <input type="number" max="99999999" name="minutes" id="minutes">
             <label for="minutes">minutes</label>
 
-            <input type="number" name="seconds" id="seconds">
+            <input type="number" max="99999999" name="seconds" id="seconds">
             <label for="seconds">seconds</label>
         </form>
         <div class="display hidden">
@@ -40,6 +40,8 @@
         <p>Created at Juno College</p>
         <div class="signature"></div>
     </footer>
+    <div class="endingAnimations hidden">
+    </div> <!-- closing animations -->
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="script/script.js"></script>
