--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Timer</title>
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/6ef8eb0028.js" crossorigin="anonymous"></script>
+    <link rel='stylesheet' href='https://unpkg.com/emoji.css/dist/emoji.min.css'>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -40,7 +41,7 @@
         <p>Created at Juno College</p>
         <div class="signature"></div>
     </footer>
-    <div class="endingAnimations hidden">
+    <div class="endingAnimations">
     </div> <!-- closing animations -->
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
