updated responsive design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <h1>my timer</h1>
-        <a href=""><i class="fas fa-cogs"></i></a>
+        <i class="fas fa-cogs"></i>
     </header>
     <main>
         <form>
@@ -35,7 +35,7 @@
         </form>
         <div class="calendar hidden">
             <div class="instruction">
-                <h3>Select a future  to set event countdown</h3>
+                <h3>Select a future date to set event countdown</h3>
             </div> <!-- closing instruction -->
             <div class="calendarNav">
                 <i class="fas fa-chevron-left"></i>
@@ -45,13 +45,13 @@
             
             
             <div class="calendarDisplay">
-                <h3>S</h3>
-                <h3>M</h3>
-                <h3>T</h3>
-                <h3>W</h3>
-                <h3>T</h3>
-                <h3>F</h3>
-                <h3>S</h3>
+                <h3>Sun</h3>
+                <h3>Mon</h3>
+                <h3>Tue</h3>
+                <h3>Wed</h3>
+                <h3>Thu</h3>
+                <h3>Fri</h3>
+                <h3>Sat</h3>
                 <ul></ul>
             </div> <!-- closing calendarDisplay -->
         </div> <!-- closing calendar -->
