updated comments and responsive designs

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
        
         <p class="srOnly">Set future date for countdown</p>
         <div class="calendarIcon">
+            <h3 class="hidden"></h3>
             <h3></h3>
             <h3></h3>
             <div></div>
